# context-kiwi

./: .gitignore  AGENTS.md  Makefile  README.md  SCHEMA.md  SUPABASE_MIGRATION_ISSUE_SUMMARY.md  pyproject.toml  pytest.ini  schema.sql
context_kiwi/: __init__.py  cli.py  server.py  server_http.py
context_kiwi/config/: __init__.py  lockfile.py  registry.py  settings.py
context_kiwi/db/: __init__.py  analytics.py  client.py  directives.py  helpers.py
context_kiwi/directives/: __init__.py  loader.py
context_kiwi/execution/: __init__.py  analytics.py  context.py  preflight.py
context_kiwi/mcp_types/: __init__.py  tools.py
context_kiwi/registry/: __init__.py  download.py
context_kiwi/tools/: __init__.py  base.py  core.py  delete.py  get.py  help.py  publish.py  registry.py  run.py  search.py
context_kiwi/utils/: __init__.py  directive_finder.py  logger.py  semver.py
docs/: AGENT_HARNESS_VISION.md  ARCHITECTURE.md  ARCHITECTURE_TRADEOFFS.md  CONTEXT_META_DIRECTIVE_ARCHITECTURE.md  CONTEXT_META_DIRECTIVE_COMPARISON.md  CONTEXT_META_DIRECTIVE_SCOPE.md  CONTEXT_META_DIRECTIVE_SUMMARY.md  FIXES_2025-12-09.md  GETTING_STARTED.md  PERMISSIONS.md  PROJECT_PATH_REQUIREMENT.md  PUBLISHING.md  README.md  ROADMAP.md  SEARCH_IMPLEMENTATION_GUIDE.md  SEARCH_IMPROVEMENTS.md  TOOL_SPEC.md
docs/migrations/: add_fulltext_search.sql  add_tags_to_directives.sql
migrations/: add_subcategory_to_directives.sql  fix_script_deprecated_column.sql
tests/: CATEGORY_SUBCATEGORY_TESTS.md  __init__.py  conftest.py  test_tools.py
tests/db/: test_client.py  test_directives.py
tests/directives/: __init__.py  test_loader.py
(+21 files in other folders)
