[project]
name = "context-kiwi"
version = "0.1.0"
description = "Directive-based code generation MCP server. Solve once, solve everywhere."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "code-generation", "llm", "directives", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.35.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
context-kiwi = "context_kiwi.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/context-kiwi"
Documentation = "https://github.com/yourusername/context-kiwi#readme"
Repository = "https://github.com/yourusername/context-kiwi"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_kiwi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
